@@ -279,7 +279,9 @@
                                                 0x3048 0x304a))
              "あいうえお")
        (test 'char-upcase (char-upcase 97) 65)
-       (test 'titlecase (string-titlecase "foo bar") "Foo Bar"))
+       (test 'titlecase (string-titlecase "foo bar") "Foo Bar")
+       (test 'search (string-search "def" "abcdefgh") 3)
+       (test 'search-ci (string-search-ci "děf" "abcDĚFgh") 3))
 
 (group "some special cases"
 
